--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,5 +17,10 @@
       Nollaa
     </button>
   </form>
+  <form action="/value" method="POST">
+    <input type="text" name="value">
+    <button type="submit">Aseta</button>
+  </form>
+
 </body>
 </html>
